<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stay Fit</string>
    <string name="action_settings">Settings</string>
    <string name="action_information">Information</string>
    <string name="title_section1">Training</string>
    <string name="title_section2">History</string>
    <string name="title_section3">General</string>
    <string name="title_section4">Start to run</string>
    <string name="textTraining">Kies je training</string>
    <string name="textGeschiedenis">Geschiedenis laden</string>
    <string name="textKaart">Kaart laden</string>
    <string name="textInformatie">Informatie laden</string>
    <string name="textDuur">TIME</string>
    <string name="textDistance">DISTANCE</string>
    <string name="textDistanceRan">0.0</string>
    <string name="textDistanceFormat">km</string>
    <string name="btnStart">START</string>
    <string name="btnStop">STOP</string>
    <string name="btnResume">RESUME</string>
    <string name="btnShowList">Show list</string>
    <string name="chrTimer">Timer</string>
    <string name="pauseDescription">button to pause</string>
    <string name="chronometerDescription">image of a chronometer</string>
    <string name="ActivityDescription">image of the chosen activity</string>
    <string name="gps_disabled_message">gps is disabled</string>
    <string name="title_activity_all_trainigs">AllTrainigsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_distance">DistanceActivity</string>
    <string name="title_activity_information">InformationActivity</string>

</resources>
