<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="vertical" >

    <GridLayout
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:columnCount="14"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/textDuur"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/chronometerDescription"
            android:layout_width="42dp"
            android:layout_height="22dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:src="@drawable/chronometer_icon" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="6"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:text="@string/chrTimer"
            android:textSize="50sp" />

    </GridLayout>

   <GridLayout
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="0"
        android:columnCount="10" >
       
        
        <Button
	        android:id="@+id/ButtonPause"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="30dp"
	        android:layout_column="0"
	        android:layout_gravity="center_horizontal|bottom"
	        android:layout_row="0"
	        android:background="@drawable/standard_button_style"
	        android:drawableLeft="@drawable/pause_icon"
	        android:onClick="pauseExercise"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp"
	        android:visibility="invisible"/>
    </GridLayout>

    <Button
        android:id="@+id/ButtonStop"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="90dp"
        android:layout_row="0"
        android:background="@drawable/standard_button_style"
        android:drawableLeft="@drawable/stop_icon"
        android:onClick="stopExercise"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnStop"
        android:textSize="50sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/ButtonStart"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="90dp"
        android:layout_row="0"
        android:background="@drawable/standard_button_style"
        android:drawableLeft="@drawable/play_icon"
        android:onClick="startExercise"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnStart"
        android:textSize="50sp" />
    
     <Button
        android:id="@+id/ButtonResume"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="90dp"
        android:layout_row="0"
        android:background="@drawable/standard_button_style"
        android:drawableLeft="@drawable/play_icon"
        android:onClick="startExercise"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnResume"
        android:textSize="50sp"
        android:visibility="invisible" />

</GridLayout>